# MechanismConfiguration

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.md  bibliography.html  genindex.html  index.html  objects.inv  overview.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: gh-pages.yml  mac.yml  python.yml  release.yml  ubuntu.yml  windows.yml
_sources/: bibliography.rst.txt  overview.rst.txt
_sources/aerosol_phases/: index.rst.txt
_sources/chemical_species/: index.rst.txt
_sources/examples/: index.rst.txt
_sources/mechanisms/: index.rst.txt
_sources/reactions/: aqueous_equilibrium.rst.txt  arrhenius.rst.txt  branched.rst.txt  cmaq_H2O2.rst.txt  cmaq_OH_HNO3.rst.txt  condensed_phase_arrhenius.rst.txt  condensed_phase_photolysis.rst.txt  hl_phase_transfer.rst.txt  photolysis.rst.txt  simpol_phase_transfer.rst.txt  surface.rst.txt  troe.rst.txt  tunneling.rst.txt
_static/css/: custom.css
aerosol_phases/: index.html
aerosol_representations/: index.html
chemical_species/: index.html
cmake/: dependencies.cmake  mechanism_configuration.settings.in  summary.cmake  test_util.cmake
docs/: requirements.txt
docs/source/: conf.py  index.rst  overview.rst  references.bib
docs/source/aerosol_phases/: index.rst
docs/source/aerosol_representations/: index.rst
docs/source/chemical_species/: index.rst
docs/source/examples/: index.rst
docs/source/mechanisms/: index.rst
docs/source/reactions/: aqueous_equilibrium.rst  arrhenius.rst  branched.rst  cmaq_H2O2.rst  cmaq_OH_HNO3.rst  condensed_phase_arrhenius.rst  condensed_phase_photolysis.rst  emission.rst  first_order_loss.rst  hl_phase_transfer.rst  index.rst  photolysis.rst  simpol_phase_transfer.rst  surface.rst  ternary_chemical_activation.rst  troe.rst  tunneling.rst  wet_deposition.rst
examples/: full_configuration.json  index.html
examples/v0/json/: reactions.json
examples/v1/: full_configuration.json  full_configuration.yaml
examples/yaml/chapman/: config.yaml  species.yaml
include/mechanism_configuration/: constants.hpp  conversions.hpp  errors.hpp  load_node.hpp  mechanism.hpp  parse_status.hpp  parser.hpp  parser_base.hpp  parser_result.hpp  validate_schema.hpp  version.hpp
include/mechanism_configuration/v0/: export.hpp  parser.hpp  parser_types.hpp  types.hpp  validation.hpp
include/mechanism_configuration/v1/: export.hpp  parser.hpp  parser_types.hpp  types.hpp  utils.hpp  validation.hpp  version.hpp  writer.hpp
include/open_atmos/: constants.hpp  types.hpp
include/open_atmos/mechanism_configuration/: conversions.hpp  json_parser.hpp  parse_status.hpp  parser.hpp  parser_types.hpp  utils.hpp  validation.hpp  version.hpp  yaml_parser.hpp
mechanisms/: index.html
packaging/: CMakeLists.txt
python/: CMakeLists.txt  wrapper.cpp
python/tests/: test_parser.py
reactions/: aqueous_equilibrium.html  arrhenius.html  branched.html  cmaq_H2O2.html  cmaq_OH_HNO3.html  condensed_phase_arrhenius.html  condensed_phase_photolysis.html  emission.html  first_order_loss.html  hl_phase_transfer.html  index.html  photolysis.html  simpol_phase_transfer.html  surface.html  ternary_chemical_activation.html  troe.html  tunneling.html  wet_deposition.html
src/: CMakeLists.txt  aqueous_equilibrium_parser.cpp  arrhenius_parser.cpp  branched_parser.cpp  condensed_phase_arrhenius_parser.cpp  condensed_phase_photolysis_parser.cpp  emission_parser.cpp  first_order_loss_parser.cpp  henrys_law_parser.cpp  json_parser.cpp  parse_status.cpp  parser.cpp  photolysis_parser.cpp  simpol_phase_transfer_parser.cpp  surface_parser.cpp  troe_parser.cpp  tunneling_parser.cpp  utils.cpp  validate_schema.cpp  validation.cpp  version.hpp.in  wet_deposition_parser.cpp  yaml_parser.cpp
src/v0/: CMakeLists.txt  arrhenius_parser.cpp  branched_parser.cpp  emission_parser.cpp  export.cpp  first_order_loss_parser.cpp  parser.cpp  parser_types.cpp  photolysis_parser.cpp  surface_parser.cpp  ternary_chemical_activation_parser.cpp  troe_parser.cpp  tunneling_parser.cpp  user_defined_reaction_parser.cpp
src/v1/: CMakeLists.txt  aqueous_equilibrium_parser.cpp  arrhenius_parser.cpp  branched_parser.cpp  condensed_phase_arrhenius_parser.cpp  condensed_phase_photolysis_parser.cpp  emission_parser.cpp  export.cpp  first_order_loss_parser.cpp  henrys_law_parser.cpp  parser.cpp  photolysis_parser.cpp  simpol_phase_transfer_parser.cpp  species_parser.cpp  surface_parser.cpp  troe_parser.cpp  tunneling_parser.cpp  utils.cpp  wet_deposition_parser.cpp  writer.cpp
test/integration/: CMakeLists.txt  test_json_parser.cpp  test_parser.cpp  test_v0_parser.cpp  test_v1_parser.cpp  test_yaml_parser.cpp
test/unit/: CMakeLists.txt  test_parse_aqueous_equilibrium.cpp  test_parse_arrhenius.cpp  test_parse_branched.cpp  test_parse_condensed_phase_arrhenius.cpp  test_parse_condensed_phase_photolysis.cpp  test_parse_emission.cpp  test_parse_first_order_loss.cpp  test_parse_henrys_law.cpp  test_parse_phases.cpp  test_parse_photolysis.cpp  test_parse_simpol_phase_transfer.cpp  test_parse_species.cpp  test_parse_surface.cpp  test_parse_troe.cpp  test_parse_tunneling.cpp  test_parse_wet_deposition.cpp  test_parser.cpp
test/unit/json/: test_parse_aqueous_equilibrium.cpp  test_parse_arrhenius.cpp  test_parse_branched.cpp  test_parse_condensed_phase_arrhenius.cpp  test_parse_condensed_phase_photolysis.cpp  test_parse_emission.cpp  test_parse_first_order_loss.cpp  test_parse_henrys_law.cpp  test_parse_phases.cpp  test_parse_photolysis.cpp  test_parse_simpol_phase_transfer.cpp  test_parse_species.cpp  test_parse_surface.cpp  test_parse_troe.cpp  test_parse_tunneling.cpp  test_parse_wet_deposition.cpp
test/unit/unit_configs/: duplicate_species.json  invalid_key.json  missing_required_key.json  species.json  valid_species.json
test/unit/v0/: CMakeLists.txt  test_arrhenius_config.cpp  test_branched_config.cpp  test_emission_config.cpp  test_export.cpp  test_first_order_loss_config.cpp  test_photolysis_config.cpp  test_species_config.cpp  test_surface_config.cpp  test_ternary_chemical_activation_config.cpp  (+3 more)
(+250 files in other folders)
