[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "mechanism_configuration"
dynamic = ["version"]
readme = "README.md"
description = "Mechanism Configuration is a library for managing chemical mechanisms in atmospheric models."
long_description = "Mechanism Configuration is a library for managing chemical mechanisms in atmospheric models which provides an interface to parse and write mechanisms."
long_description_content_type = "text/plain"
authors = [
  { name = "Matthew Dawsom", email = "mattdawson@ucar.edu" },
  { name = "Kyle Shores", email = "kshores@ucar.edu" },
]
maintainers = [
  { name = "ACOM MUSICA Developers", email = "musica-support@ucar.edu" },
]
license = { file = "LICENSE" }

dependencies = []

[project.optional-dependencies]
test = [
  'pytest'
]

[tool.scikit-build]
cmake.args = [
  "-DOPEN_ATMOS_ENABLE_PYTHON_LIBRARY=ON",
  "-DOPEN_ATMOS_ENABLE_TESTS=OFF",
  "-DCMAKE_BUILD_TYPE=Release",
  "-DBUILD_SHARED_LIBS=ON",
]

[project.urls]
homepage = "https://open-atmos.github.io/MechanismConfiguration/"

# dynamically read the version: https://scikit-build-core.readthedocs.io/en/latest/configuration.html#dynamic-metadata
[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "CMakeLists.txt"
regex = 'mechanism_configuration VERSION\s+(?P<value>[0-9.]+)'

[[tool.scikit-build.generate]]
path = "mechanism_configuration/_version.py"
template = '''
version = "${version}"
'''
